--- a/Quantumult X/AD_Gai_JS.conf
+++ b/Quantumult X/AD_Gai_JS.conf
@@ -82,6 +82,9 @@ http://api.wscdn.vip(.+) url script-response-body https://cdn.jsdelivr.net/gh/Zh
 # 解锁酷我音乐会员➕听书
 ^http://(.+).kuwo.cn(/v2/api/user/info|/a.p|/vip/v2/user/vip) url script-response-body https://raw.githubusercontent.com/nameking77/Qx/main/rewrite/kwyy.js
 
+# 解锁酷我音乐会员下载
+^https?:\/\/musicpay\.kuwo\.cn\/music\.pay\?newver.+$ url script-request-body https://raw.githubusercontent.com/nameking77/Qx/main/rewrite/kwyyxz.js
+
 ###########id77作者###########
 //hostname= education.github.com,baimiao.uzero.cn,*.intsig.net,
 
