--- a/Quantumult X/AD_Gai_Function.conf
+++ b/Quantumult X/AD_Gai_Function.conf
@@ -1,5 +1,4 @@
-hostname = pan.baidu.com,blog.csdn.net,*.openinstall.io,www.jianshu.com,post.smzdm.com,post.m.smzdm.com,oia.zhihu.com,link.zhihu.com,www.zhihu.com,www.google.com,raw.githubusercontent.com, greasyfork.org,openuserjs.org,guide-acs.m.taobao.com,gist.githubusercontent.com, api.weibo.cn,mapi.weibo.com,*.uve.weibo.com,trade-acs.m.taobao.com,api.m.jd.com,ios-*.prod.ftl.netflix.com,ios.prod.ftl.netflix.com, api.zhihu.com,appcloud2.zhihu.com,103.41.167.236,103.41.167.234,103.41.167.235,103.41.167.226,app-api.smzdm.com,homepage-api.smzdm.com,haojia-api.smzdm.com,haojia.m.smzdm.com,baike-api.smzdm.com,s-api.smzdm.com,zhiyou.m.smzdm.com,app.biliintl.com,app.bilibili.com,api.live.bilibili.com,api.vc.bilibili.com,api.bilibili.com,manga.bilibili.com,grpc.biliapi.net,*.byteoversea.com,*.tik-tokapi.com,*.tiktokv.com, magev6.if.qidian.com,api.zhihu.com,www.zhihu.com,api-access.pangolin-sdk-toutiao.com,news.ssp.qq.com,r.inews.qq.com,us.l.qq.com,mi.gdt.qq.com,spclient.wg.spotify.com,afd.baidu.com,boxer.baidu.com, *.baidu.com,tieba.baidu.com, m.weibo.cn,zhuanlan.zhihu.com, mp.weixin.qq.com,pan.baidu.com, m.douban.com, *.snssdk.com,rtbapi.douyucdn.cn,getuserinfo.321mh.com,langapi.lv-show.com, *.xxjjappss.com,api.m.jd.com,shopmember.m.jd.com,testflight.apple.com, api.ithome.com,new.vip.weibo.cn,*.mb3admin.com,*.emby.wtf,*.plusmedia.site,*.jmsooo.com,-redirector*.googlevideo.com,*.googlevideo.com,www.youtube.com,s.youtube.com,youtubei.googleapis.com,*.doubleclick.net,*.googleusercontent.com,*.googlesyndication.com,*.appspot.com,w.mail.qq.com,sub.store,*.media.dssott.com,*.media.starott.com,*.api.hbo.com,*.hbomaxcdn.com,*.huluim.com,*.nflxvideo.net,*.cbsaavideo.com,*.cbsivideo.com,*.cloudfront.net,*.akamaihd.net,*.avi-cdn.net,*.youtube.com
-
+hostname = pan.baidu.com,blog.csdn.net,*.openinstall.io,www.jianshu.com,post.smzdm.com,post.m.smzdm.com,oia.zhihu.com,link.zhihu.com,www.zhihu.com,www.google.com,raw.githubusercontent.com, greasyfork.org,openuserjs.org,guide-acs.m.taobao.com,gist.githubusercontent.com, api.weibo.cn,mapi.weibo.com,*.uve.weibo.com,trade-acs.m.taobao.com,api.m.jd.com,ios-*.prod.ftl.netflix.com,ios.prod.ftl.netflix.com, api.zhihu.com,appcloud2.zhihu.com,103.41.167.236,103.41.167.234,103.41.167.235,103.41.167.226,app-api.smzdm.com,homepage-api.smzdm.com,haojia-api.smzdm.com,haojia.m.smzdm.com,baike-api.smzdm.com,s-api.smzdm.com,zhiyou.m.smzdm.com,app.biliintl.com,app.bilibili.com,api.live.bilibili.com,api.vc.bilibili.com,api.bilibili.com,manga.bilibili.com,grpc.biliapi.net,*.byteoversea.com,*.tik-tokapi.com,*.tiktokv.com, magev6.if.qidian.com,api.zhihu.com,www.zhihu.com,api-access.pangolin-sdk-toutiao.com,news.ssp.qq.com,r.inews.qq.com,us.l.qq.com,mi.gdt.qq.com,spclient.wg.spotify.com,afd.baidu.com,boxer.baidu.com, *.baidu.com,tieba.baidu.com, m.weibo.cn,zhuanlan.zhihu.com, mp.weixin.qq.com,pan.baidu.com, m.douban.com, *.snssdk.com,rtbapi.douyucdn.cn,getuserinfo.321mh.com,langapi.lv-show.com, *.xxjjappss.com,api.m.jd.com,shopmember.m.jd.com,testflight.apple.com, api.ithome.com,new.vip.weibo.cn,*.mb3admin.com,*.emby.wtf,*.plusmedia.site,*.jmsooo.com,-redirector*.googlevideo.com,*.googlevideo.com,www.youtube.com,s.youtube.com,youtubei.googleapis.com,*.doubleclick.net,*.googleusercontent.com,*.googlesyndication.com,*.appspot.com,w.mail.qq.com,sub.store, play-edge.itunes.apple.com,hls.itunes.apple.com,hls-svod.itunes.apple.com,vod-*.tv.apple.com,*.media.dssott.com,*.media.starott.com,atv-ps.amazon.com,atv-ps-fe.primevideo.com,*.hls.row.aiv-cdn.net,*.dash.row.aiv-cdn.net,cf-timedtext.aux.pv-cdn.net,*avodhlss3ww-a.akamaihd.net,d25xi40x97liuc.cloudfront.net,dmqdd6hw24ucf.cloudfront.net,d22qjgkvxw22r6.cloudfront.net,d1v5ir2lpwr8os.cloudfront.net,d27xxe7juh1us6.cloudfront.net,manifests.v2.api.hbo.com,*.hbomaxcdn.com,manifest-dp.hulustream.com,livemanifest-f.hulustream.com,live-sc.hulustream.com,assets.huluim.com,assetshuluimcom-a.akamaihd.net,*-pplus.cbs.com,vod-*.cbsaavideo.com,vod-*.cbsivideo.com,*.airspace-*.cbsivideo.com,dplus-ph-prod-vod.akamaized.net,dplus-ph-google-v2.prod-vod.h264.io,*.stream.peacocktv.com,*.cdn.peacocktv.com,content-discovery.uplynk.com,x-default-stgec.uplynk.com,*-discovery1.uplynk.com
 
 
 
@@ -491,8 +490,85 @@ ctier=[A-Z] url 302 ctier=A
 # Quantumult X Sub-store插件重写
 ^https?:\/\/sub\.store url script-analyze-echo-response https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/backend/sub-store.min.js
 
-# Dualsub
-# Disney+, Star+, HBO Max, Hulu, Netflix, Paramount+, Prime Video, YouTube, etc. subtitles add-ons
-^http.+(media.(dss|star)ott|manifests.v2.api.hbo|hbomaxcdn|nflxvideo|cbs(aa|i)video|cloudfront|akamaihd|avi-cdn|huluim).(com|net)\/(.+\.vtt($|\?m=\d+)|.+-all-.+\.m3u8.*|hls\.m3u8.+|\?o=\d+&v=\d+&e=.+|\w+\/2\$.+\/[a-zA-Z0-9-]+\.m3u8) url script-response-body https://raw.githubusercontent.com/Neurogram-R/Quantumult-X/main/Dualsub.js
-https:\/\/(setting|general).(media.dssott|hbomaxcdn|nflxvideo|youtube|cbsivideo|cloudfront|huluim).(com|net)\/\?action=(g|s)et url script-analyze-echo-response https://raw.githubusercontent.com/Neurogram-R/Quantumult-X/main/Dualsub.js
-https:\/\/www.youtube.com\/api\/timedtext.+ url script-request-header https://raw.githubusercontent.com/Neurogram-R/Quantumult-X/main/Dualsub.js
+
+#🍿️ DualSubs for Streaming Media Platform
+#desc= (0.6.x) 流媒体平台字幕增强及双语模块
+#[Script]
+# DualSubs.Apple_TV.HLS.m3u8
+^https?:\/\/(play|play-edge|hls)\.itunes\.apple\.com\/WebObjects\/(MZPlay|MZPlayLocal)\.woa\/hls\/playlist\.m3u8(\?.*) url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.HLS.M3U8.js
+# DualSubs.Apple_TV.WebVTT.m3u8
+^https?:\/\/vod-(.*)-amt\.tv\.apple\.com\/itunes-assets\/(.*)\/([0-9a-f]{8}(-[0-9a-f]{4}){3}-[0-9a-f]{12})\/(.*)_subtitles\.m3u8(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.WebVTT.M3U8.js
+# DualSubs.Apple_TV.vtt
+^https?:\/\/vod-(.*)-amt\.tv\.apple\.com\/itunes-assets\/(.*)\/([0-9a-f]{8}(-[0-9a-f]{4}){3}-[0-9a-f]{12})\/(.*)\.webvtt(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.VTT.js
+
+# DualSubs.Apple_TV_Plus.HLS.m3u8
+^https?:\/\/(play|play-edge|hls)\.itunes\.apple\.com\/WebObjects\/(MZPlay|MZPlayLocal)\.woa\/hls\/subscription\/playlist\.m3u8(\?.*) url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.HLS.M3U8.js
+# DualSubs.Apple_TV_Plus.WebVTT.m3u8
+^https?:\/\/(play|play-edge|hls)\.itunes\.apple\.com\/WebObjects\/(MZPlay|MZPlayLocal)\.woa\/hls\/subscription\/stream\/playlist\.m3u8(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.WebVTT.M3U8.js
+# DualSubs.Apple_TV_Plus.vtt
+^https?:\/\/vod-(.*)-aoc\.tv\.apple\.com\/itunes-assets\/(.*)\/([0-9a-f]{8}(-[0-9a-f]{4}){3}-[0-9a-f]{12})\/(.*)\.webvtt(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.VTT.js
+
+# DualSubs.Apple_Fitness.HLS.m3u8
+^https?:\/\/(play|play-edge|hls)\.itunes\.apple\.com\/WebObjects\/(MZPlay|MZPlayLocal)\.woa\/hls\/workout\/playlist\.m3u8(\?.*) url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.HLS.M3U8.js
+# DualSubs.Apple_Fitness.WebVTT.m3u8
+^https?:\/\/(hls|hls-svod)\.itunes\.apple\.com\/itunes-assets\/(.*)\/([0-9a-f]{8}(-[0-9a-f]{4}){3}-[0-9a-f]{12})\/(.*)\.m3u8(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.WebVTT.M3U8.js
+# DualSubs.Apple_Fitness.vtt
+^https?:\/\/(hls|hls-svod)\.itunes\.apple\.com\/itunes-assets\/(.*)\/([0-9a-f]{8}(-[0-9a-f]{4}){3}-[0-9a-f]{12})\/(.*)\.webvtt(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.VTT.js
+
+# DualSubs.Disney_Plus.HLS.m3u8
+^https?:\/\/(.*)\.media\.(dssott|starott)\.com\/ps01\/disney\/([0-9a-f]{8}(-[0-9a-f]{4}){3}-[0-9a-f]{12})\/(cbcs|ctr)-all-(.*)\.m3u8(\?.*) url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.HLS.M3U8.js
+# DualSubs.Disney_Plus.WebVTT.m3u8
+^https?:\/\/(.*)\.media\.(dssott|starott)\.com\/ps01\/disney\/([0-9a-f]{8}(-[0-9a-f]{4}){3}-[0-9a-f]{12})\/r\/(.*)\.m3u8(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.WebVTT.M3U8.js
+# DualSubs.Disney_Plus.vtt
+^https?:\/\/(.*)\.media\.(dssott|starott)\.com\/ps01\/disney\/([0-9a-f]{8}(-[0-9a-f]{4}){3}-[0-9a-f]{12})\/(.*)\.vtt(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.VTT.js
+
+# DualSubs.Prime_Video.HLS.m3u8
+^https?:\/\/(.*)\.((hls|dash)\.row\.aiv-cdn|akamaihd)\.net\/(.*)\/([0-9a-f]{8}(-[0-9a-f]{4}){3}-[0-9a-f]{12})\.m3u8(\?.*)?$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.HLS.M3U8.js
+# DualSubs.Prime_Video.WebVTT.m3u8
+^https?:\/\/(.*)\.cloudfront\.net\/(.*)\/([0-9a-f]{8}(-[0-9a-f]{4}){3}-[0-9a-f]{12})\.m3u8(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.WebVTT.M3U8.js
+# DualSubs.Prime_video.vtt
+^https?:\/\/(.*)\.cloudfront\.net\/(.*)\/([0-9a-f]{8}(-[0-9a-f]{4}){3}-[0-9a-f]{12})\.vtt(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.VTT.js
+
+# DualSubs.HBO_Max.HLS.m3u8
+^https?:\/\/manifests\.v2\.api\.hbo\.com\/hls\.m3u8(\?.*) url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.HLS.M3U8.js
+# DualSubs.HBO_Max.WebVTT.m3u8
+^https?:\/\/manifests\.v2\.api\.hbo\.com\/hlsMedia\.m3u8(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.WebVTT.M3U8.js
+# DualSubs.HBO_Max.vtt
+^https?:\/\/(.*)\.hbomaxcdn\.com\/videos\/(.*)\.vtt(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.VTT.js
+
+# DualSubs.Hulu.HLS.m3u8
+^https?:\/\/manifest-dp\.hulustream\.com\/hls\/(\d+)\.m3u8(\?.*) url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.HLS.M3U8.js
+# DualSubs.Hulu.playlist.json
+# ^https?:\/\/play\.hulu\.com\/(v\d)\/playlist url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.PlayList.JSON.js
+# DualSubs.Hulu.WebVTT.m3u8
+^https?:\/\/manifest-dp\.hulustream\.com\/webvtt(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.WebVTT.M3U8.js
+# DualSubs.Hulu.vtt
+^https?:\/\/(assets\.huluim\.com|assetshuluimcom-a\.akamaihd\.net)\/captions_webvtt\/(.+[^blank])\.vtt(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.VTT.js
+
+# DualSubs.Paramount_Plus.HLS.m3u8
+^https?:\/\/(vod-.*|(.*)\.airspace-.*|.*-pplus)\.(cbsaavideo|cbsivideo|cbs)\.com\/(.*)\/(master|manifest)\.m3u8(\?.*)?$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.HLS.M3U8.js
+# DualSubs.Paramount_Plus.WebVTT.m3u8
+^https?:\/\/(vod-.*|(.*)\.airspace-.*|.*-pplus)\.(cbsaavideo|cbsivideo|cbs)\.com\/(.*)\/(stream_vtt|manifest_.*)\.m3u8(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.WebVTT.M3U8.js
+# DualSubs.Paramount_Plus.vtt
+^https?:\/\/(vod-.*|(.*)\.airspace-.*|.*-pplus)\.(cbsaavideo|cbsivideo|cbs)\.com\/(.*)\.vtt(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.VTT.js
+^https?:\/\/cc\.cbs\.com\/closedcaption\/(.*)\.vtt(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.VTT.js
+
+# DualSubs.Discovery_Plus_Ph.HLS.m3u8
+^https?:\/\/(dplus-ph-prod-vod\.akamaized\.net|dplus-ph-google-v2\.prod-vod\.h264\.io)\/(.+)\/master\.m3u8(\?.*)?$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.HLS.M3U8.js
+# DualSubs.Discovery_Plus_Ph.WebVTT.m3u8
+^https?:\/\/(dplus-ph-prod-vod\.akamaized\.net|dplus-ph-google-v2\.prod-vod\.h264\.io)\/(.+)\/captions\.m3u8(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.WebVTT.M3U8.js
+# DualSubs.Discovery_Plus_Ph.vtt
+^https?:\/\/(dplus-ph-prod-vod\.akamaized\.net|dplus-ph-google-v2\.prod-vod\.h264\.io)\/(.+)\.vtt(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.VTT.js
+
+# DualSubs.Peacock.HLS.m3u8
+^https?:\/\/(.*)\.cdn\.peacocktv\.com\/pub\/global\/(.*)\/(pck_\d+)\/cmaf\/(.*)\/master_cmaf\.m3u8$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.HLS.M3U8.js
+# DualSubs.Peacock.WebVTT.m3u8
+^https?:\/\/(.*)\.cdn\.peacocktv\.com\/pub\/global\/(.*)\/cmaf\/(.*)\/[^\/]*subtitles[^\/]*\.m3u8(\?.*dualsubs=\w+)$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.WebVTT.M3U8.js
+# DualSubs.Peacock.vtt
+^https?:\/\/(.*)\.cdn\.peacocktv\.com\/pub\/global\/(.*)\/cmaf\/(.*)\/[^\/]*subtitles[^\/]*\.webvtt(\?.*dualsubs=\w+)?$ url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.VTT.js
+
+# DualSubs.Discovery_Plus.HLS.m3u8
+# ^https?:\/\/content-discovery\.uplynk\.com\/(.+)\.m3u8(\?.*) url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.HLS.M3U8.js
+
+# DualSubs.Netflix.vtt
+# ^https?:\/\/(.*)\.nflxvideo\.net\/\?o=(\d+)&v=(\d+)&e=(.*) url script-response-body https://raw.githubusercontent.com/DualSubs/DualSubs/main/js/DualSubs.VTT.js
