--- a/Quantumult X/AD_Gai_JS.conf
+++ b/Quantumult X/AD_Gai_JS.conf
@@ -71,7 +71,7 @@ hostname= mp.weixin.qq.com,p.du.163.com,vsco.co,user*.zymk.cn,vni.kwaiying.com,*
 //hostname=gw.aoscdn.com,api.wscdn.vip,*.gotokeep.com,*.kuwo.cn, 
 
 # 傲软抠图解锁会员
-^https?:\/\/gw\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-response-body https://raw.githubusercontent.com/nameking77/Qx/main/rewrite/arkt
+^https?:\/\/gw\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-response-body https://raw.githubusercontent.com/nameking77/Qx/main/rewrite/arkt.js
 
 #波波视频
 http://api.wscdn.vip(.+) url script-response-body https://cdn.jsdelivr.net/gh/Zhuliyer/ADGai-nai@master/Quantumult%20X/Scripts/bobo
