--- a/Quantumult X/AD_Gai_JS.conf
+++ b/Quantumult X/AD_Gai_JS.conf
@@ -91,7 +91,7 @@ http://api.wscdn.vip(.+) url script-response-body https://cdn.jsdelivr.net/gh/Zh
 ^https://(.+)/snail-music url script-response-body https://raw.githubusercontent.com/nameking77/Qx/main/rewrite/wnsm.js
 
 # plane vpn恢复订阅@king
-^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/nameking77/Qx/main/rewrite/plane%20vpn.js
+#^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/nameking77/Qx/main/rewrite/plane%20vpn.js
 
 #TATA直播解锁付费
 http://j7700.opscnc.com/api/public/(.+)service=Live.checkLive url script-response-body https://raw.githubusercontent.com/nameking77/Qx/main/rewrite/TATA.js
@@ -148,10 +148,10 @@ http://j7700.opscnc.com/api/public/(.+)service=Live.checkLive url script-respons
 ^https?:\/\/(sc|gongdu)\.youshu\.cc\/(m|w|mp)\/(user\/count|media\/media_info|common\/elite_page_content|(page\/v2\/10010016|item\/subpage_pack_list).+)$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/CellularBookProCrack.js
 
 # 计算器HD解锁会员
-^https?:\/\/www\.40sishi\.com\/(list|currency|calculator)\/user\/profile$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/CalculatorHDProCrack.js
+^https?:\/\/www\.40sishi\.com\/(list|currency|calculator)\/user\/profile$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/
 
-# > 拦截100解锁永久超级会员
-^https?:\/\/tagit\.hyhuo\.com\/cypt\/block100\/get_vip_info$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/Block100FVIPCrack.js
+# > 拦截100解锁超级会员
+^https?:\/\/tagit\.hyhuo\.com\/cypt\/block100\/get_vip_info$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/Block100SVIPCrack.js
 
 # > AudioMack解锁永久订阅
 //1⃣️：开启 QX 脚本
