--- a/Quantumult X/AD_Gai_JS.conf
+++ b/Quantumult X/AD_Gai_JS.conf
@@ -2,11 +2,8 @@ hostname= mp.weixin.qq.com,vip1.kuwo.cn,p.du.163.com,apigate.zymk.cn,vni.kwaiyin
 
 	
 ###########NobyDa作者###########
-//hostname=mp.weixin.qq.com,vip1.kuwo.cn,p.du.163.com,apigate.zymk.cn,vni.kwaiying.com,*.my10api.com,www.luqijianggushi.com,account.wps.cn,origin-prod-phoenix.jibjab.com,api.bjxkhc.com,xy-viva.kakalili.com,ap*.intsig.net,m*.bybutter.com,api.vuevideo.net,api.picsart.c*,ios.fuliapps.com,apple.fuliapps.com,*.pipiapps.com,ios.xiangjiaoapps.com,apple.xiangjiaoapps.com,*.xiangxiangapps.com,api.meiease.c*, api.m.jd.com,api.revenuecat.com,pan.baidu.com,bmall.camera360.com,api.polaxiong.com
+//hostname= vip1.kuwo.cn,p.du.163.com,apigate.zymk.cn,vni.kwaiying.com,*.my10api.com,www.luqijianggushi.com,account.wps.cn,origin-prod-phoenix.jibjab.com,api.bjxkhc.com,xy-viva.kakalili.com,ap*.intsig.net,m*.bybutter.com,api.vuevideo.net,api.picsart.c*,ios.fuliapps.com,apple.fuliapps.com,*.pipiapps.com,ios.xiangjiaoapps.com,apple.xiangjiaoapps.com,*.xiangxiangapps.com,api.meiease.c*, api.m.jd.com,api.revenuecat.com,pan.baidu.com,bmall.camera360.com,api.polaxiong.com
       
-# 去微信公众号广告 (By Choler)
-^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/Wechat.js
-
 # 酷我音乐SVIP (By yxiaocai)
 #^https?:\/\/vip1\.kuwo\.cn\/(vip\/v2\/user\/vip|vip\/spi/mservice) url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Kuwo.js
 
