--- a/Quantumult X/AD-Start-Reject.conf
+++ b/Quantumult X/AD-Start-Reject.conf
@@ -1,4 +1,23 @@
-hostname= api.gamer.com,beta-api.crunchyroll.com,api.vistopia.com.cn,pss.txffp.com,api.pinduoduo.com,api.yangkeduo.com,m.sd.10086.cn,gw.alicdn.com,helper.2bulu.com,47.100.65.202, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, new.vip.weibo.cn, wap.js.10086.cn, tagit.hyhuo.com, top-widgets-api.xiaozujian.com, tel.mangaapi.manhuaren.com, apis.lifeweek.com.cn, support.you.163.com, yanxuan.nosdn.127.net, *.peopleapp.com, api-mifit-sg2.huami.com, new-app-api.ylyk.com, gw.aihuishou.com, *.58cdn.com.cn, app.58.com, acs.m.taobao.com, static.zhihu.com, creditcardapp.bankcomm.com, res.xiaojukeji.com, 116.85.2.15, 116.85.2.14, lchttpapi.xczim.com, business.msstatic.com, mangaapi.manhuaren.com, api.gotokeep.com, api.kkmh.com, *.chelaile.net.cn, api-mifit.huami.com, api.jr.mi.com, api.m.mi.com, guanyu.longfor.com, pages.xiaohongshu.com, www.xiaohongshu.com, gw.alicdn.com, elemecdn.com, fuss10.elemecdn.com, www1.elecfans.com, m.tuniu.com, consumer.fcbox.com, mapi.mafengwo.cn, api.xiaoyi.com, api.douban.com, otheve.beacon.qq.com, mapi.sfbest.com, m5.amap.com, capi.mwee.cn, sso.ifanr.com, s3plus.meituan.net,flowplus.meituan.net, p*.meituan.net, img.meituan.net, testflight.apple.com, rich.kuwo.cn,*.kwcdn.kuwo.cn,mobilead.kuwo.cn, v.icbc.com.cn, ms.jr.jd.com, wmapi.meituan.com, appconf.mail.163.com, business.msstatic.com, dl-cu-hz.lechange.cn, bdsp-x.jd.com, dsp-x.jd.com, api.m.jd.com, fbchina.flipchina.cn, zone.guiderank-app.com,ad.12306.cn, homefront.qunar.com, afd.baidu.com, *.bdstatic.com, j-image.missfresh.cn, ma-adx.ctrip.com, m.ctrip.com, mbd.baidu.com, img.rr.tv, api.rr.tv, capis.didapinche.com,capis*.didapinche.com, app-api.smzdm.com,homepage-api.smzdm.com,haojia-api.smzdm.com,haojia.m.smzdm.com,baike-api.smzdm.com,s-api.smzdm.com,zhiyou.m.smzdm.com, *.hoopchina.com,goblin.hupu.com,spclient.wg.spotify.com,www.youtube.com, s.youtube.com, *.googlevideo.com,-redirector*.googlevideo.com
+hostname= api.yikaobang.com.cn,api-ad-product.huxiu.com,jad-api.jin10.com,mob.mddcloud.com.cn,appactive.1234567.com.cn,gab.122.gov.cn,api.gamer.com,beta-api.crunchyroll.com,api.vistopia.com.cn,pss.txffp.com,api.pinduoduo.com,api.yangkeduo.com,m.sd.10086.cn,gw.alicdn.com,helper.2bulu.com,47.100.65.202, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, new.vip.weibo.cn, wap.js.10086.cn, tagit.hyhuo.com, top-widgets-api.xiaozujian.com, tel.mangaapi.manhuaren.com, apis.lifeweek.com.cn, support.you.163.com, yanxuan.nosdn.127.net, *.peopleapp.com, api-mifit-sg2.huami.com, new-app-api.ylyk.com, gw.aihuishou.com, *.58cdn.com.cn, app.58.com, acs.m.taobao.com, static.zhihu.com, creditcardapp.bankcomm.com, res.xiaojukeji.com, 116.85.2.15, 116.85.2.14, lchttpapi.xczim.com, business.msstatic.com, mangaapi.manhuaren.com, api.gotokeep.com, api.kkmh.com, *.chelaile.net.cn, api-mifit.huami.com, api.jr.mi.com, api.m.mi.com, guanyu.longfor.com, pages.xiaohongshu.com, www.xiaohongshu.com, gw.alicdn.com, elemecdn.com, fuss10.elemecdn.com, www1.elecfans.com, m.tuniu.com, consumer.fcbox.com, mapi.mafengwo.cn, api.xiaoyi.com, api.douban.com, otheve.beacon.qq.com, mapi.sfbest.com, m5.amap.com, capi.mwee.cn, sso.ifanr.com, s3plus.meituan.net,flowplus.meituan.net, p*.meituan.net, img.meituan.net, testflight.apple.com, rich.kuwo.cn,*.kwcdn.kuwo.cn,mobilead.kuwo.cn, v.icbc.com.cn, ms.jr.jd.com, wmapi.meituan.com, appconf.mail.163.com, business.msstatic.com, dl-cu-hz.lechange.cn, bdsp-x.jd.com, dsp-x.jd.com, api.m.jd.com, fbchina.flipchina.cn, zone.guiderank-app.com,ad.12306.cn, homefront.qunar.com, afd.baidu.com, *.bdstatic.com, j-image.missfresh.cn, ma-adx.ctrip.com, m.ctrip.com, mbd.baidu.com, img.rr.tv, api.rr.tv, capis.didapinche.com,capis*.didapinche.com, app-api.smzdm.com,homepage-api.smzdm.com,haojia-api.smzdm.com,haojia.m.smzdm.com,baike-api.smzdm.com,s-api.smzdm.com,zhiyou.m.smzdm.com, *.hoopchina.com,goblin.hupu.com,spclient.wg.spotify.com,www.youtube.com, s.youtube.com, *.googlevideo.com,-redirector*.googlevideo.com
+
+# > 32 医考帮去开屏广告@ddgksf2013
+^https?:\/\/api\.yikaobang\.com\.cn\/client\/main\/homePageSmallAd url reject
+^https?:\/\/api\.yikaobang\.com\.cn\/index\.php\/Client\/main\/startPage url reject
+
+# > 31 huxiu去广告@ddgksf2013
+^https:\/\/api-ad-product\.huxiu\.com\/Api\/Product\/SDK\/Advert\/Query\/queryAdvertListInfo url reject
+
+# > 30 金十数据去除开屏广告和应用内弹窗@kyle
+^https?:\/\/jad-api\.jin10\.com\/ad url reject
+
+# > 29 埋堆堆去开屏及播放页广告@ddgksf2013
+^https?:\/\/mob\.mddcloud\.com\.cn\/adApi\/advert url reject
+
+# > 28 天天基金(需卸载重装)@ddgksf2013
+^https?:\/\/appactive\.1234567\.com\.cn\/AppoperationApi\/OperationService\/GetAppStartImg url reject-dict
+
+# > 27 交管12123(需卸载重装)@kyle
+^https:\/\/gab\.122\.gov\.cn\/eapp\/m\/sysquery url reject
 
 # > 动画疯 - api.gamer.com
 ^https:\/\/api\.gamer\.com\.tw\/mobile_app\/anime\/v\d/(token|m3u8).php\?  url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Bahamut/BahamutAnimeAds.js
