--- a/Quantumult X/AD_Gai_Function.conf
+++ b/Quantumult X/AD_Gai_Function.conf
@@ -1,4 +1,4 @@
-hostname = pan.baidu.com,blog.csdn.net,*.openinstall.io,www.jianshu.com,post.smzdm.com,post.m.smzdm.com,oia.zhihu.com,link.zhihu.com,www.zhihu.com,www.google.com,raw.githubusercontent.com, greasyfork.org,openuserjs.org,guide-acs.m.taobao.com,gist.githubusercontent.com, api.weibo.cn,mapi.weibo.com,*.uve.weibo.com,trade-acs.m.taobao.com,api.m.jd.com,ios-*.prod.ftl.netflix.com,ios.prod.ftl.netflix.com, api.zhihu.com,appcloud2.zhihu.com,103.41.167.236,103.41.167.234,103.41.167.235,103.41.167.226,app-api.smzdm.com,homepage-api.smzdm.com,haojia-api.smzdm.com,haojia.m.smzdm.com,baike-api.smzdm.com,s-api.smzdm.com,zhiyou.m.smzdm.com,app.biliintl.com,app.bilibili.com,api.live.bilibili.com,api.vc.bilibili.com,api.bilibili.com,manga.bilibili.com,grpc.biliapi.net,*.byteoversea.com,*.tik-tokapi.com,*.tiktokv.com, magev6.if.qidian.com,api.zhihu.com,www.zhihu.com,api-access.pangolin-sdk-toutiao.com,news.ssp.qq.com,r.inews.qq.com,us.l.qq.com,mi.gdt.qq.com,spclient.wg.spotify.com,afd.baidu.com,boxer.baidu.com, *.baidu.com,tieba.baidu.com, m.weibo.cn,zhuanlan.zhihu.com, mp.weixin.qq.com,pan.baidu.com, m.douban.com, *.snssdk.com,rtbapi.douyucdn.cn,getuserinfo.321mh.com,langapi.lv-show.com, *.xxjjappss.com,api.m.jd.com,shopmember.m.jd.com,testflight.apple.com, api.ithome.com,new.vip.weibo.cn,*.mb3admin.com,*.emby.wtf,*.plusmedia.site,*.jmsooo.com,-redirector*.googlevideo.com,*.googlevideo.com,www.youtube.com,s.youtube.com,youtubei.googleapis.com,*.doubleclick.net,*.googleusercontent.com,*.googlesyndication.com,*.appspot.com,w.mail.qq.com,sub.store,play-edge.itunes.apple.com, hls.itunes.apple.com, hls-svod.itunes.apple.com, vod-*.tv.apple.com, *.media.dssott.com, *.media.starott.com, atv-ps.amazon.com, atv-ps-fe.primevideo.com, *.hls.row.aiv-cdn.net, *.dash.row.aiv-cdn.net, cf-timedtext.aux.pv-cdn.net, *avodhlss3ww-a.akamaihd.net, d25xi40x97liuc.cloudfront.net, dmqdd6hw24ucf.cloudfront.net, d22qjgkvxw22r6.cloudfront.net, d1v5ir2lpwr8os.cloudfront.net, d27xxe7juh1us6.cloudfront.net, *.api.hbo.com, *.hbomaxcdn.com, manifest-dp.hulustream.com, livemanifest-f.hulustream.com, live-sc.hulustream.com, assets.huluim.com, assetshuluimcom-a.akamaihd.net, link.theplatform.com, *-pplus.cbs.com, vod-*.cbsaavideo.com, vod-*.cbsivideo.com, *.airspace-*.cbsivideo.com, content-discovery.uplynk.com, *-discovery1.uplynk.com, x-default-stgec.uplynk.com, dplus-ph-prod-vod.akamaized.net, dplus-ph-google-v2.prod-vod.h264.io, *.stream.peacocktv.com, *.cdn.peacocktv.com, *-vod.fubo.tv, hls.ted.com, pubads.g.doubleclick.net, vod-*.live.cf.md.bbci.co.uk, vod-*-live.akamaized.net, api.britbox.com
+hostname = pan.baidu.com,blog.csdn.net,*.openinstall.io,www.jianshu.com,post.smzdm.com,post.m.smzdm.com,oia.zhihu.com,link.zhihu.com,www.zhihu.com,www.google.com,raw.githubusercontent.com, greasyfork.org,openuserjs.org,guide-acs.m.taobao.com,gist.githubusercontent.com, api.weibo.cn,mapi.weibo.com,*.uve.weibo.com,trade-acs.m.taobao.com,api.m.jd.com,ios-*.prod.ftl.netflix.com,ios.prod.ftl.netflix.com, api.zhihu.com,appcloud2.zhihu.com,103.41.167.236,103.41.167.234,103.41.167.235,103.41.167.226,app-api.smzdm.com,homepage-api.smzdm.com,haojia-api.smzdm.com,haojia.m.smzdm.com,baike-api.smzdm.com,s-api.smzdm.com,zhiyou.m.smzdm.com,app.bilibili.com,api.live.bilibili.com,api.vc.bilibili.com,api.bilibili.com,manga.bilibili.com,grpc.biliapi.net,api.biliapi.net,*.byteoversea.com,*.tik-tokapi.com,*.tiktokv.com, magev6.if.qidian.com,api.zhihu.com,www.zhihu.com,api-access.pangolin-sdk-toutiao.com,news.ssp.qq.com,r.inews.qq.com,us.l.qq.com,mi.gdt.qq.com,spclient.wg.spotify.com,afd.baidu.com,boxer.baidu.com, *.baidu.com,tieba.baidu.com, m.weibo.cn,zhuanlan.zhihu.com, mp.weixin.qq.com,pan.baidu.com, m.douban.com, *.snssdk.com,rtbapi.douyucdn.cn,getuserinfo.321mh.com,langapi.lv-show.com, *.xxjjappss.com,api.m.jd.com,shopmember.m.jd.com,testflight.apple.com, api.ithome.com,new.vip.weibo.cn,*.mb3admin.com,*.emby.wtf,*.plusmedia.site,*.jmsooo.com,-redirector*.googlevideo.com,*.googlevideo.com,www.youtube.com,s.youtube.com,youtubei.googleapis.com,*.doubleclick.net,*.googleusercontent.com,*.googlesyndication.com,*.appspot.com,w.mail.qq.com,sub.store,play-edge.itunes.apple.com, hls.itunes.apple.com, hls-svod.itunes.apple.com, vod-*.tv.apple.com, *.media.dssott.com, *.media.starott.com, atv-ps.amazon.com, atv-ps-fe.primevideo.com, *.hls.row.aiv-cdn.net, *.dash.row.aiv-cdn.net, cf-timedtext.aux.pv-cdn.net, *avodhlss3ww-a.akamaihd.net, d25xi40x97liuc.cloudfront.net, dmqdd6hw24ucf.cloudfront.net, d22qjgkvxw22r6.cloudfront.net, d1v5ir2lpwr8os.cloudfront.net, d27xxe7juh1us6.cloudfront.net, *.api.hbo.com, *.hbomaxcdn.com, manifest-dp.hulustream.com, livemanifest-f.hulustream.com, live-sc.hulustream.com, assets.huluim.com, assetshuluimcom-a.akamaihd.net, link.theplatform.com, *-pplus.cbs.com, vod-*.cbsaavideo.com, vod-*.cbsivideo.com, *.airspace-*.cbsivideo.com, content-discovery.uplynk.com, *-discovery1.uplynk.com, x-default-stgec.uplynk.com, dplus-ph-prod-vod.akamaized.net, dplus-ph-google-v2.prod-vod.h264.io, *.stream.peacocktv.com, *.cdn.peacocktv.com, *-vod.fubo.tv, hls.ted.com, pubads.g.doubleclick.net, vod-*.live.cf.md.bbci.co.uk, vod-*-live.akamaized.net, api.britbox.com
 
 
 ###########elecC2作者###########	
@@ -100,7 +100,7 @@ https:\/\/www\.google\.com\/(m|search) url script-response-body https://raw.gith
 ^https?:\/\/ios(-.*)?\.prod\.ftl\.netflix\.com\/iosui\/warmer/.+type=show-ath url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/nf_rating_season.js
 
 ###########blcakmatrix7作者###########
-//hostname = api.zhihu.com,appcloud2.zhihu.com,103.41.167.236,103.41.167.234,103.41.167.235,103.41.167.226,app-api.smzdm.com,homepage-api.smzdm.com,haojia-api.smzdm.com,haojia.m.smzdm.com,baike-api.smzdm.com,s-api.smzdm.com,zhiyou.m.smzdm.com,app.biliintl.com,app.bilibili.com,api.live.bilibili.com,api.vc.bilibili.com,api.bilibili.com,manga.bilibili.com,grpc.biliapi.net*.byteoversea.com,*.tik-tokapi.com,*.tiktokv.com
+//hostname = api.zhihu.com,appcloud2.zhihu.com,103.41.167.236,103.41.167.234,103.41.167.235,103.41.167.226,app-api.smzdm.com,homepage-api.smzdm.com,haojia-api.smzdm.com,haojia.m.smzdm.com,baike-api.smzdm.com,s-api.smzdm.com,zhiyou.m.smzdm.com,app.bilibili.com,api.live.bilibili.com,api.vc.bilibili.com,api.bilibili.com,manga.bilibili.com,grpc.biliapi.net,api.biliapi.net,*.byteoversea.com,*.tik-tokapi.com,*.tiktokv.com
 
 
 //知乎去AD
@@ -179,51 +179,53 @@ URL-REGEX,^https?:\/\/api\.zhihu\.com\/commercial_api\/launch_v2\? url reject-di
 # 值会员权益中心banner广告
 ^https?:\/\/zhiyou\.m\.smzdm\.com\/user\/vip\/ajax_get_banner url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/smzdm/smzdm_remove_ads.js
 
-# ~ BiliBili_嗶哩嗶哩_應用開屏去廣告@bm7
+# ～ BiliBili_哔哩哔哩_启动时开启直连模式@ddgksf2013
+^https?:\/\/api\.bilibili\.com\/x\/offline\/version url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/bilibili_startup_direct.js
+# ～ BiliBili_哔哩哔哩_繁体CC字幕转中文简体@ddgksf2013
+;^https?:\/\/i.\.hdslb\.com\/bfs\/subtitle\/.+\.json$ url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/bilibili_cc.js
+# ～ BiliBili_哔哩哔哩_观影页面去广告@ddgksf2013
+^https?:\/\/api\.(bilibili|biliapi)\.(com|net)\/pgc\/page\/cinema\/tab\? url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/bilibili_diy.js
+# ～ BiliBili_哔哩哔哩_应用开屏去广告@bm7
 ^https://app.bilibili.com/x/v2/splash/show url reject-dict
-# ~ BiliBili_嗶哩嗶哩_應用開屏廣告预加载@yjqiang
+# ～ BiliBili_哔哩哔哩_应用开屏广告预加载@yjqiang
 ^https:\/\/app\.bilibili\.com\/x\/v2\/splash\/list url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/bilibili_diy.js
-# ~ BiliBili_嗶哩嗶哩_去除統一設置的皮膚@ddgksf2013
+# ～ BiliBili_哔哩哔哩_去除统一设置的皮肤@ddgksf2013
 ^https?:\/\/app\.bilibili\.com\/x\/resource\/show\/skin\? url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/bilibili_diy.js
-# ~ BiliBili_嗶哩嗶哩_1080P高码率+4K畫質(番劇和影視除外)@ddgksf2013
+# ～ BiliBili_哔哩哔哩_1080P高码率+4K画质(番剧和影视除外)@ddgksf2013
 ^https?:\/\/app\.bilibili\.com\/x\/v2\/account\/myinfo\? url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/bilibili_diy.js
-# ~ BiliBili_嗶哩嗶哩_热搜发现@ddgksf2013
+# ～ BiliBili_哔哩哔哩_热搜发现@ddgksf2013
 ^https://app.bilibili.com/x/v2/search/square url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/bilibili_diy.js
-# ~ BiliBili_嗶哩嗶哩_Defaultword@ddgksf2013
+# ～ BiliBili_哔哩哔哩_Defaultword@ddgksf2013
 ^https://app.bilibili.com/x/v2/search/defaultwords url reject-dict
-# ~ BiliBili_嗶哩嗶哩_Material_Ad@ddgksf2013
+# ～ BiliBili_哔哩哔哩_Material_Ad@ddgksf2013
 ^https?:\/\/api\.bilibili\.com\/x\/vip\/ads\/material\/report url reject-dict
-# ~ BiliBili_嗶哩嗶哩_收藏前10
-;^https:\/\/app\.bilibili\.com\/x\/v2\/space\?access_key url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/bilibili_space_10.js
-# ~ BiliBili_嗶哩嗶哩_小卡片廣告@ddgksf2013
+# ～ BiliBili_哔哩哔哩_小卡片广告@ddgksf2013
 ^https://api.bilibili.com/pgc/season/player/cards url reject-dict
-# ~ BiliBili_嗶哩嗶哩_解除SIM卡地區限制
-(^https?:\/\/app\.biliintl.com\/intl\/.+)(&sim_code=\d+)(.+) url 302 $1$3
-# ~ BiliBili_嗶哩嗶哩_去除搜索中的大家都在搜@bm7
+# ～ BiliBili_哔哩哔哩_解除SIM卡地区限制
+;(^https?:\/\/app\.biliintl.com\/intl\/.+)(&sim_code=\d+)(.+) url 302 $1$3
+# ～ BiliBili_哔哩哔哩_去除搜索中的大家都在搜@bm7
 ^https?:\/\/api\.vc\.bilibili\.com\/search_svr\/v\d\/Search\/recommend_words url reject
-# ~ BiliBili_嗶哩嗶哩_去除動態中的話題@bm7
+# ～ BiliBili_哔哩哔哩_去除动态中的话题@bm7
 ^https?:\/\/api\.vc\.bilibili\.com\/topic_svr\/v1\/topic_svr url reject-dict
-# ~ BiliBili_嗶哩嗶哩_去除動態中的最常訪問@bm7
-;^https?:\/\/api\.vc\.bilibili\.com\/dynamic_svr\/v1\/dynamic_svr\/mix_uplist url reject-dict
-# ~ BiliBili_嗶哩嗶哩_可能的一些推廣(beta)@bm7
+# ～ BiliBili_哔哩哔哩_可能的一些推广(beta)@bm7
 ^https?:\/\/api\.bilibili\.com\/pgc\/season\/app\/related\/recommend\? url reject-dict
-# ~ BiliBili_嗶哩嗶哩_漫畫去廣告@ddgksf2013
+# ～ BiliBili_哔哩哔哩_漫画去广告@ddgksf2013
 ^https?:\/\/manga\.bilibili\.com\/twirp\/comic\.v\d\.Comic\/(Flash|ListFlash) url reject-dict
-# ~ BiliBili_嗶哩嗶哩_推薦去廣告@ddgksf2013
+# ～ BiliBili_哔哩哔哩_推荐去广告@ddgksf2013
 ^https?:\/\/app\.bilibili\.com\/x\/v2\/feed\/index url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/bilibili_diy.js
-# ~ BiliBili_嗶哩嗶哩_追番去廣告@bm7
-^https?:\/\/api\.bilibili\.com\/pgc\/page\/bangumi url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/bilibili_diy.js
-# ~ BiliBili_嗶哩嗶哩_直播去廣告@bm7
+# ～ BiliBili_哔哩哔哩_追番去广告@ddgksf2013
+^https?:\/\/api\.(bilibili|biliapi)\.(com|net)\/pgc\/page\/bangumi url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/bilibili_diy.js
+# ～ BiliBili_哔哩哔哩_直播去广告@bm7
 ^https?:\/\/api\.live\.bilibili\.com\/xlive\/app-room\/v1\/index\/getInfoByRoom url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/bilibili_diy.js
-# ~ BiliBili_嗶哩嗶哩_動態去廣告@bm7
+# ～ BiliBili_哔哩哔哩_动态去广告@bm7
 ^https?:\/\/api\.vc\.bilibili\.com\/dynamic_svr\/v1\/dynamic_svr\/dynamic_(history|new)\? url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/bilibili_diy.js
-# ~ BiliBili_嗶哩嗶哩_標籤頁處理@ddgksf2013
+# ～ BiliBili_哔哩哔哩_标籤页处理@ddgksf2013
 ^https?:\/\/app\.bilibili\.com\/x\/resource\/show\/tab url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/bilibili_diy.js
-# ~ BiliBili_嗶哩嗶哩_我的頁面處理@ddgksf2013
+# ～ BiliBili_哔哩哔哩_我的页面处理@ddgksf2013
 ^https?:\/\/app\.bilibili\.com\/x\/v2\/account\/mine url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/bilibili_diy.js
-# ~ BiliBili_嗶哩嗶哩_Proto去广告@app2smile
+# ～ BiliBili_哔哩哔哩_Proto去广告@app2smile
 ^https:\/\/app\.bilibili\.com\/bilibili\.app\.(view\.v1\.View\/View|dynamic\.v2\.Dynamic\/DynAll)$ url script-response-body https://raw.githubusercontent.com/app2smile/rules/master/js/bilibili-proto.js
-# ~ BiliBili_嗶哩嗶哩_動態廣告@yjqiang
+# ～ BiliBili_哔哩哔哩_动态广告@yjqiang
 ;^https://app\.bilibili\.com/bilibili\.app\.dynamic\.v2\.Dynamic/DynAll$ url script-response-body https://raw.githubusercontent.com/yjqiang/surge_scripts/main/scripts/bilibili/bilibili_dynamic.js
 
 # NAME: TikTok(日本解锁)
