--- a/Quantumult X/AD-Start-Reject.conf
+++ b/Quantumult X/AD-Start-Reject.conf
@@ -1,38 +1,37 @@
 hostname= security.wechat.com,weixin110.qq.com,cdn.*.chelaileapp.cn,api.coolapk.com,edith.xiaohongshu.com,app3.qdaily.com,daoyu.sdo.com,img.jiemian.com,ccsp-egmas.sf-express.com,*.laichon.com,app.ap.d3yuiw4.com,www.i3zh.com,*.xima*.*,*.xmcdn.*,oauth.secure.pixiv.net,cdn.*.chelaileapp.cn,web.chelaile.net.cn,api.yikaobang.com.cn,api-ad-product.huxiu.com,jad-api.jin10.com,mob.mddcloud.com.cn,appactive.1234567.com.cn,gab.122.gov.cn,api.gamer.com,beta-api.crunchyroll.com,api.vistopia.com.cn,pss.txffp.com,api.pinduoduo.com,api.yangkeduo.com,m.sd.10086.cn,gw.alicdn.com,helper.2bulu.com,47.100.65.202, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, new.vip.weibo.cn, wap.js.10086.cn, tagit.hyhuo.com, top-widgets-api.xiaozujian.com, tel.mangaapi.manhuaren.com, apis.lifeweek.com.cn, support.you.163.com, yanxuan.nosdn.127.net, *.peopleapp.com, api-mifit-sg2.huami.com, new-app-api.ylyk.com, gw.aihuishou.com, *.58cdn.com.cn, app.58.com, acs.m.taobao.com, static.zhihu.com, creditcardapp.bankcomm.com, res.xiaojukeji.com, 116.85.2.15, 116.85.2.14, lchttpapi.xczim.com, business.msstatic.com, mangaapi.manhuaren.com, api.gotokeep.com, api.kkmh.com, *.chelaile.net.cn, api-mifit.huami.com, api.jr.mi.com, api.m.mi.com, guanyu.longfor.com, pages.xiaohongshu.com, www.xiaohongshu.com, gw.alicdn.com, elemecdn.com, fuss10.elemecdn.com, www1.elecfans.com, m.tuniu.com, consumer.fcbox.com, mapi.mafengwo.cn, api.xiaoyi.com, api.douban.com, otheve.beacon.qq.com, mapi.sfbest.com, m5.amap.com, capi.mwee.cn, sso.ifanr.com, s3plus.meituan.net,flowplus.meituan.net, p*.meituan.net, img.meituan.net, testflight.apple.com, rich.kuwo.cn,*.kwcdn.kuwo.cn,mobilead.kuwo.cn, v.icbc.com.cn, ms.jr.jd.com, wmapi.meituan.com, appconf.mail.163.com, business.msstatic.com, dl-cu-hz.lechange.cn, bdsp-x.jd.com, dsp-x.jd.com, api.m.jd.com, fbchina.flipchina.cn, zone.guiderank-app.com,ad.12306.cn, homefront.qunar.com, afd.baidu.com, *.bdstatic.com, j-image.missfresh.cn, ma-adx.ctrip.com, m.ctrip.com, mbd.baidu.com, img.rr.tv, api.rr.tv, capis.didapinche.com,capis*.didapinche.com, app-api.smzdm.com,homepage-api.smzdm.com,haojia-api.smzdm.com,haojia.m.smzdm.com,baike-api.smzdm.com,s-api.smzdm.com,zhiyou.m.smzdm.com, *.hoopchina.com,goblin.hupu.com,spclient.wg.spotify.com,www.youtube.com, s.youtube.com, *.googlevideo.com,-redirector*.googlevideo.com
 
-# > 101 微信110@zZPiglet
+# > 微信110@zZPiglet
 ^https\:\/\/(weixin110\.qq|security.wechat)\.com\/cgi-bin\/mmspamsupport-bin\/newredirectconfirmcgi\? url script-response-body https://raw.githubusercontent.com/zZPiglet/Task/master/asset/UnblockURLinWeChat.js
 
-# > 100 车来了@ddgksf2013
+# > 车来了@ddgksf2013
 ^https?:\/\/cdn\.\w{3}\.chelaileapp\.cn\/(api\/)?adpub url reject-dict
 
-# > 099 酷安去好物推荐@Eric 
+# > 酷安去好物推荐@Eric 
 ^https?:\/\/api\.coolapk\.com\/v6\/feed\/detail url script-response-body https://github.com/Alex0510/Eric/raw/master/surge/Script/KA.js
 
-# > 098 小红书开屏广告@chouchoui
+# >  小红书开屏广告@chouchoui
 ^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v2\/system_service\/splash_config url script-response-body https://raw.githubusercontent.com/chouchoui/QuanX/master/Scripts/xiaohongshu/xiaohongshu.ad.js
 
-# > 097 好奇心日报去广告@ddgksf2013
+# > 好奇心日报去广告@ddgksf2013
 ^https?:\/\/app3\.qdaily\.com\/app\d\/boot_advertisements\.json url reject
 
-# > 096 叨鱼去广告@ddgksf2013
+# > 叨鱼去广告@ddgksf2013
 ^https?:\/\/daoyu\.sdo\.com\/api\/userCommon\/getAppStartAd url reject
 
-# > 095 界面新闻去广告@ddgksf2013
+# > 界面新闻去广告@ddgksf2013
 ^https?:\/\/img\.jiemian\.com\/ads\/ url reject
 
-# > 094 顺丰APP屏蔽更新@ddgksf2013
+# > 顺丰APP屏蔽更新@ddgksf2013
 ^https?:\/\/ccsp-egmas\.sf-express\.com\/cx-app-base\/base\/app\/appVersion\/detectionUpgrade url reject-dict
 
-# > 093 LaiChon去广告@ddgksf2013
+# > LaiChon去广告@ddgksf2013
 ^https?:\/\/(mobile|shop)\.laichon\.com\/api\/(v1\/goods\/goodsList|exposureAdvStatistics|getWebAdvList) url reject-dict
 
-# > 092 One去除广告@ddgksf2013
+# > One去除广告@ddgksf2013
 ^http:\/\/app\.api\.d3yuiw4\.com\/api\/app\/ad url reject
 
-# > 091 I3去弹窗广告@ddgksf2013
+# > I3去弹窗广告@ddgksf2013
 ^https?:\/\/www\.i3zh\.com url response-body cm-pop-up-banners response-body ddgksf2013
-
 
 # ～ XiMaLaYa_喜马拉雅_屏蔽gif弹窗Ad@ddgksf2013
 ^https?:\/\/.*\.xmcdn\.com\/\w{8}\/\w{4}-\w{16}\/.+gif$ url reject
