--- a/Quantumult X/AD_Gai_Function.conf
+++ b/Quantumult X/AD_Gai_Function.conf
@@ -344,7 +344,12 @@ https://m\.weibo\.cn/comments/hotflow.*max_id=.* url reject-dict
 ###########I-am-R-E作者###########
 #hostname= m.douban.com,
 # > 豆瓣电影和电视剧添加便捷播放按钮(2022.01.28)
-^https?:\/\/m\.douban\.com\/movie\/subject\/\d+\/ url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/DouBan.js
+#^https?:\/\/m\.douban\.com\/movie\/subject\/\d+\/ url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/DouBan.js
+// - 豆瓣电影移动版网页增强- 快捷跳转 茶杯狐 搜索-展示在映流媒体平台-快捷收藏电影至Airtable
+// 茶杯狐、流媒体
+^https://m.douban.com/movie/subject/.+ url script-response-body Douban.js
+// Airtable 收藏
+^https://m.douban.com/movie/subject/.+\?seen=\d url script-request-header Douban.js
 
 ###########Liquor030作者###########
 //hostname = *.snssdk.com,rtbapi.douyucdn.cn,getuserinfo.321mh.com,langapi.lv-show.co,
