--- a/Quantumult X/Q-Search.conf
+++ b/Quantumult X/Q-Search.conf
@@ -52,7 +52,9 @@
 # jshu:简书
 # blog: 博客园搜索
 # yh: 油猴搜索
-
+# so： Stack Overflow
+# se：StackExchange
+# wa：WolframAlpha
 
 
 # zdm: 什么值得买
@@ -78,7 +80,7 @@
 # ph:  PornHub 
 # kw: 酷我音乐搜索
 # yfs：音范丝搜索
-
+# ys：xxx (cupfox)
 
 # api:Devdocs开发文档的搜索(eg: api json)
 # gdb: 古丁堡图书
@@ -273,6 +275,17 @@
 # blog: 博客园
 ^https:\/\/duckduckgo.com\/\?q=blog\+([^&]+).+ url 302 https://zzk.cnblogs.com/s?w=$1 
 
+# so：Stack Overflow
+^https:\/\/duckduckgo.com\/\?q=so\+([^&]+).+ url 302 https://stackoverflow.com/search?q=$1
+
+# se：StackExchange
+^https:\/\/duckduckgo.com\/\?q=se\+([^&]+).+ url 302 https://stackexchange.com/search?q=$1
+
+# wa：WolframAlpha
+^https:\/\/duckduckgo.com\/\?q=wa\+([^&]+).+ url 302 https://www.wolframalpha.com/input/?i=$1
+
+
+
 #命令
 
 # yh: 油猴搜索
@@ -421,9 +434,12 @@
 # ph  (PornHub) 
 ^https:\/\/duckduckgo.com\/\?q=ph\+([^&]+).+ url 302 https://cn.pornhub.com/video/search?search=$1 
 
-
-# yfs 音范丝搜索
+# yfs （音范丝搜索）
 ^https:\/\/duckduckgo.com\/\?q=yfs\+([^&]+).+ url 302 http://www.yinfans.me/?s=$1
+
+# ys  (cupfox)
+^https:\/\/duckduckgo.com\/\?q=ys\+([^&]+).+ url 302 https://cupfox.app/search?key=$1
+
 
 #学术
 
@@ -438,6 +454,7 @@
 # mdv (medrxiv)
 
 ^https:\/\/duckduckgo.com\/\?q=mdv\+([^&]+).+ url 302 https://www.medrxiv.org/search/$1 
+
 
 #网盘资源搜索
 
