--- a/Quantumult X/Q-Search.conf
+++ b/Quantumult X/Q-Search.conf
@@ -149,7 +149,7 @@
 # 无指令则转 Google 搜索
 
 
- 
+ hostname=duckduckgo.com
 
 #gm   (Google图片)
 ^https:\/\/duckduckgo.com\/\?q=gm\+([^&]+).+ url 302 https://www.google.com/search?&tbm=isch&q=$1
