--- a/Quantumult X/AD_Gai_Function.conf
+++ b/Quantumult X/AD_Gai_Function.conf
@@ -341,6 +341,17 @@ https://m\.weibo\.cn/comments/hotflow.*max_id=.* url reject-dict
 ^https?:\/\/www\.51devapp\.com\/adconfigs - reject
 ^https?:\/\/.+?\.snssdk\.com\/ad\/ - reject
 
+#TestFlight账户管理脚本
+#主要功能：
+#1. 自动存储多个TestFlight账户，并自动合并APP列表，避免切换账户。
+#2. 账户内单个测试版APP允许多方共享：
+# - 导出：点击测试版APP -> 底部开发者许可协议 -> 复制密钥并分享给对方
+# - 导入：TestFlight 右上角"兑换" -> 粘贴密钥 -> 弹出保存成功通知后刷新APP列表
+# - 多方共享为实验性功能，双方都需要使用该脚本； 该功能主要解决某些APP的TF名额稀缺的问题
+#请注意，该脚本已经与"TF区域限制解除脚本"合并，如需使用该脚本请务必禁用它，否则可能出现APP安装异常
+^https:\/\/testflight\.apple\.com\/v\d\/(app|account|invite)s\/ url script-analyze-echo-response https://raw.githubusercontent.com/NobyDa/Script/master/TestFlight/TestFlightAccount.js
+
+
 ###########I-am-R-E作者###########
 #hostname= m.douban.com,
 # > 豆瓣电影和电视剧添加便捷播放按钮(2022.01.28)
@@ -387,9 +398,10 @@ https:\/\/.*\..*\.com\/(vod\/reqplay\/|ucp\/index|getGlobalData|init) url script
 https://api\.m\.jd\.com\/client\.action\?appid=jd_shop_member&functionId=getShopMemberCardDetail&.+ url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/unbind.js
 
 #解决国区TF中无法下载某些应用（QX、小火箭、LOON）的问题
-^https?:\/\/testflight\.apple\.com\/v2\/accounts\/.*\/apps\/\d*/builds/\d*/install url request-body storefrontId" : ".*" request-body storefrontId" : "143441-1,29"
+#^https?:\/\/testflight\.apple\.com\/v2\/accounts\/.*\/apps\/\d*/builds/\d*/install url request-body storefrontId" : ".*" request-body storefrontId" : "143441-1,29"
 #M系列Mac解除iOS TF軟件下載限制
-^https:\/\/testflight\.apple\.com((\/v3\/accounts\/.+?\/apps$)|(\/v2\/accounts\/.+?\/apps\/.+?\/builds\/.+)) url script-response-body https://github.com/ddgksf2013/Cuttlefish/raw/master/Script/ForceInstall.js
+#^https:\/\/testflight\.apple\.com((\/v3\/accounts\/.+?\/apps$)|(\/v2\/accounts\/.+?\/apps\/.+?\/builds\/.+)) url script-response-body https://github.com/ddgksf2013/Cuttlefish/raw/master/Script/ForceInstall.js
+
 
 ###########杂乱有序###########
 //hostname=api.ithome.com,new.vip.weibo.cn,*.mb3admin.com,*.emby.wtf,*.plusmedia.site,*.jmsooo.com,-redirector*.googlevideo.com,*.googlevideo.com,www.youtube.com,s.youtube.com,youtubei.googleapis.com,*.doubleclick.net,*.googleusercontent.com,*.googlesyndication.com,*.appspot.com,w.mail.qq.com,sub.store,play-edge.itunes.apple.com, hls.itunes.apple.com, hls-svod.itunes.apple.com, vod-*.tv.apple.com, *.media.dssott.com, *.media.starott.com, atv-ps.amazon.com, atv-ps-fe.primevideo.com, *.hls.row.aiv-cdn.net, *.dash.row.aiv-cdn.net, cf-timedtext.aux.pv-cdn.net, *avodhlss3ww-a.akamaihd.net, d25xi40x97liuc.cloudfront.net, dmqdd6hw24ucf.cloudfront.net, d22qjgkvxw22r6.cloudfront.net, d1v5ir2lpwr8os.cloudfront.net, d27xxe7juh1us6.cloudfront.net, *.api.hbo.com, *.hbomaxcdn.com, manifest-dp.hulustream.com, livemanifest-f.hulustream.com, live-sc.hulustream.com, assets.huluim.com, assetshuluimcom-a.akamaihd.net, link.theplatform.com, *-pplus.cbs.com, vod-*.cbsaavideo.com, vod-*.cbsivideo.com, *.airspace-*.cbsivideo.com, content-discovery.uplynk.com, *-discovery1.uplynk.com, x-default-stgec.uplynk.com, dplus-ph-prod-vod.akamaized.net, dplus-ph-google-v2.prod-vod.h264.io, *.stream.peacocktv.com, *.cdn.peacocktv.com, *-vod.fubo.tv, hls.ted.com, pubads.g.doubleclick.net, vod-*.live.cf.md.bbci.co.uk, vod-*-live.akamaized.net, api.britbox.com
