--- a/Quantumult X/AD-Start-Reject.conf
+++ b/Quantumult X/AD-Start-Reject.conf
@@ -33,12 +33,18 @@ hostname= security.wechat.com,weixin110.qq.com,cdn.*.chelaileapp.cn,api.coolapk.
 # > I3去弹窗广告@ddgksf2013
 ^https?:\/\/www\.i3zh\.com url response-body cm-pop-up-banners response-body ddgksf2013
 
+# ～ XiMaLaYa_喜马拉雅_播放页_Live@ddgksf2013
+^https?:\/\/.*\.xima.*\.com\/mobile-playpage\/view\/ url reject
+# ～ XiMaLaYa_喜马拉雅_MyInfo红点提醒@ddgksf2013
+^https?:\/\/.*\.xima.*\.com\/chaos-notice-web\/v1\/message\/preview\/list url reject
+# ～ XiMaLaYa_喜马拉雅_屏蔽大红包Tips@ddgksf2013
+^https?:\/\/.*\.xima.*\.com\/social-web\/bottomTabs\/dynamicEntrance\/status url reject
 # ～ XiMaLaYa_喜马拉雅_屏蔽gif弹窗Ad@ddgksf2013
 ^https?:\/\/.*\.xmcdn\.com\/\w{8}\/\w{4}-\w{16}\/.+gif$ url reject
 # ～ XiMaLaYa_喜马拉雅_屏蔽Aged请求@ddgksf2013
-https?:\/\/.*\.xima.*\.com\/(dog-portal\/checkOld|(child-mobile\/child|aged-mobile\/aged)\/mode\/query) url reject
+^https?:\/\/.*\.xima.*\.com\/(dog-portal\/checkOld|(child-mobile\/child|aged-mobile\/aged)\/mode\/query) url reject
 # ～ XiMaLaYa_喜马拉雅_部分Tab弹窗@ddgksf2013
-https?:\/\/.*\.xima.*\.com\/discovery-feed\/isShowUserGiftPendant url reject
+^https?:\/\/.*\.xima.*\.com\/discovery-feed\/isShowUserGiftPendant url reject
 # ～ XiMaLaYa_喜马拉雅_屏蔽红点提示@ddgksf2013
 ^https?:\/\/.*\.xima.*\.com\/mobile-user\/unread url reject
 # ～ XiMaLaYa_喜马拉雅_屏蔽minor请求@ddgksf2013
@@ -60,11 +66,11 @@ https?:\/\/.*\.xima.*\.com\/discovery-feed\/isShowUserGiftPendant url reject
 # ～ XiMaLaYa_喜马拉雅_屏蔽ting_Ad@ddgksf2013
 ^https?:\/\/.*\.xima.*\.com\/ting\/(loading|feed|home)? url reject
 # ～ XiMaLaYa_喜马拉雅_屏蔽首页滚动_Ad@ddgksf2013
-^https?:\/\/.*\.xima.*\.com\/discovery-feed\/v\d\/mix url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/xmlyad.js
+^https?:\/\/.*\.xima.*\.com\/discovery-feed\/v\d\/mix url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/xmly_json.js
 # ～ XiMaLaYa_喜马拉雅_屏蔽Tab页滚动_Ad@ddgksf2013
-^https?:\/\/.*\.xima.*\.com\/discovery-category\/v\d/category url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/xmlyad.js
+^https?:\/\/.*\.xima.*\.com\/discovery-category\/v\d/category url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/xmly_json.js
 # ～ XiMaLaYa_喜马拉雅_去除我的页面Ad_Tag@ddgksf2013
-^https?:\/\/.*\.xima.*\.com\/mobile-user\/v\d\/homePage url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/xmlyad.js
+^https?:\/\/.*\.xima.*\.com\/mobile-user\/v\d\/homePage url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/xmly_json.js
 
 # ～ Pixiv去除广告（2022-05-19）@ddgksf2013
 ^https?:\/\/oauth\.secure\.pixiv\.net\/(auth\/token) url script-response-body https://github.com/ddgksf2013/Cuttlefish/raw/master/Crack/pixivpro.js
