--- a/Quantumult X/AD-Start-Reject.conf
+++ b/Quantumult X/AD-Start-Reject.conf
@@ -73,7 +73,7 @@ hostname= security.wechat.com,weixin110.qq.com,cdn.*.chelaileapp.cn,api.coolapk.
 ^https?:\/\/.*\.xima.*\.com\/mobile-user\/v\d\/homePage url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/xmly_json.js
 
 # ～ Pixiv去除广告（2022-05-19）@ddgksf2013
-^https?:\/\/oauth\.secure\.pixiv\.net\/(auth\/token) url script-response-body https://github.com/ddgksf2013/Cuttlefish/raw/master/Crack/pixivpro.js
+#^https?:\/\/oauth\.secure\.pixiv\.net\/(auth\/token) url script-response-body https://github.com/ddgksf2013/Cuttlefish/raw/master/Crack/pixivpro.js
 
 //车来了去广告 ddgksf2013
 https?:\/\/cdn\.\w{3}\.chelaileapp\.cn\/(api\/)?adpub url reject-dict
