--- a/Quantumult X/AD_Gai_JS.conf
+++ b/Quantumult X/AD_Gai_JS.conf
@@ -701,7 +701,7 @@ https:\//www.tianya.cn\/m\/vip\/ url script-response-body https://raw.githubuser
 https:\/\/www\.xmind\.cn\/\_res\/devices url script-response-body https://raw.githubusercontent.com/litieyin/AD_VIP/main/Script/XMind.js
 	
 # 金融时报VIP&去开屏广告
-^https:\//d1025gvspu57dc.cloudfront.net\/index.php\/jsapi\/paywall url script-response-body https://raw.githubusercontent.com/litieyin/AD_VIP/main/Script/ft.js
+#^https:\//d1025gvspu57dc.cloudfront.net\/index.php\/jsapi\/paywall url script-response-body https://raw.githubusercontent.com/litieyin/AD_VIP/main/Script/ft.js
 ^https:\//d1025gvspu57dc.cloudfront.net\/log\/new_log.php url reject
 ^https:\//creatives\.ftacademy\.cn\/ads url reject
 	
