--- a/Quantumult X/AD_Gai_Function.conf
+++ b/Quantumult X/AD_Gai_Function.conf
@@ -259,7 +259,10 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/external/Q
 
 ###########app2smile作者###########
 //hostname=api-access.pangolin-sdk-toutiao.com, mi.gdt.qq.com, open.e.kuaishou.com,spclient.wg.spotify.com,afd.baidu.com,boxer.baidu.com
-	
+
+#  qx广告联盟去广告
+# 仓库地址 https://github.com/app2smile/rules
+# 快手联盟,优量汇,穿山甲	
 ^https:\/\/(api-access\.pangolin-sdk-toutiao\.com\/api\/ad\/union\/sdk\/get_ads|open\.e\.kuaishou\.com\/rest\/e\/v3\/open\/univ$|mi\.gdt\.qq\.com\/gdt_mview\.fcg\?) url script-response-body https://raw.githubusercontent.com/app2smile/rules/master/js/adsense.js
 
 //部分解锁premium 需iOS15 ,建议重新登录,音质不能设置为超高
