--- a/Quantumult X/AD_Gai_Function.conf
+++ b/Quantumult X/AD_Gai_Function.conf
@@ -417,9 +417,9 @@ https://api\.m\.jd\.com\/client\.action\?appid=jd_shop_member&functionId=getShop
 ^https?:\/\/api\.ithome\.com\/json\/(newslist|listpage)\/news url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/ITHome.js
 
 # 去微博应用内广告 (yichahucha)
-^https:\//new.vip.weibo.cn\/aj\/paycomponent\/pageinfo url script-response-body https://raw.githubusercontent.com/litieyin/AD_VIP/main/Script/weibo/vip.js
-^https:\//new.vip.weibo.cn\/aj\/vipcenter\/home url script-response-body https://raw.githubusercontent.com/litieyin/AD_VIP/main/Script/weibo/viphome.js
-^https:\//api.weibo.cn\/device\/get url script-response-body https://raw.githubusercontent.com/litieyin/AD_VIP/main/Script/weibo/setting.js
+#^https:\//new.vip.weibo.cn\/aj\/paycomponent\/pageinfo url script-response-body https://raw.githubusercontent.com/litieyin/AD_VIP/main/Script/weibo/vip.js
+#^https:\//new.vip.weibo.cn\/aj\/vipcenter\/home url script-response-body https://raw.githubusercontent.com/litieyin/AD_VIP/main/Script/weibo/viphome.js
+#^https:\//api.weibo.cn\/device\/get url script-response-body https://raw.githubusercontent.com/litieyin/AD_VIP/main/Script/weibo/setting.js
 
 # Emby ( 使用 Shu 下载 )
 #【客户端】播放权限解锁；iOS【浏览器】上激活下载按钮并调用 Shu APP 下载影片 (包括外挂字幕)。
