--- a/Quantumult X/AD_Gai_Function.conf
+++ b/Quantumult X/AD_Gai_Function.conf
@@ -414,7 +414,7 @@ https://api\.m\.jd\.com\/client\.action\?appid=jd_shop_member&functionId=getShop
 ^https:\/\/api\.ithome\.com\/json\/newslist\/news url script-response-body https://raw.githubusercontent.com/toulanboy/scripts/master/ithome_ad/ithome_ad.js
 # IT之家 去新闻列表广告
 #^https?:\/\/api\.ithome\.com\/json\/slide\/index url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/ITHome.js
-^https?:\/\/api\.ithome\.com\/json\/(newslist|listpage)\/news url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/ITHome.js
+#^https?:\/\/api\.ithome\.com\/json\/(newslist|listpage)\/news url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/ITHome.js
 
 # 去微博应用内广告 (yichahucha)
 #^https:\//new.vip.weibo.cn\/aj\/paycomponent\/pageinfo url script-response-body https://raw.githubusercontent.com/litieyin/AD_VIP/main/Script/weibo/vip.js
