--- a/Quantumult X/AD_Gai_JS.conf
+++ b/Quantumult X/AD_Gai_JS.conf
@@ -726,63 +726,63 @@ https://apivip.zybang.com/vipols/vip/viphomev1?.+ url script-response-body https
 ^https?://shimo.im/lizard-api/users/ url script-response-body https://raw.githubusercontent.com/Wizardp007/Scripts/main/QuantumultX/jss/shimo.js
 
 # 花椒视频 (By Alex0510)
-http://user.shywck.com/user/userinfo url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/hjsp.js
+http://user.shywck.com/user/userinfo url script-response-body https://raw.ev2.workers.dev/liu123aq/nzw9314_QuantumultX/main/Script/hjsp.js
 
 # 迅捷应用6合1 （by LTribe）
-^https?:\/\/.*\.xunjie.*\.com\/api\/v\d\/* url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/xunjie.js
+^https?:\/\/.*\.xunjie.*\.com\/api\/v\d\/* url script-response-body https://raw.ev2.workers.dev/liu123aq/nzw9314_QuantumultX/main/Script/xunjie.js
 
 # 小睡眠（by 黑黑酱）
-^https:\/\/api\.psy-1\.com\/cosleep\/user\/info url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/xiaoshuimian.js
+^https:\/\/api\.psy-1\.com\/cosleep\/user\/info url script-response-body https://raw.ev2.workers.dev/liu123aq/nzw9314_QuantumultX/main/Script/xiaoshuimian.js
 
 # 可可英语会员
-^https:\/\/mob2015\.kekenet\.com\/keke\/mobile\/index\.php url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/kkyy.js
+^https:\/\/mob2015\.kekenet\.com\/keke\/mobile\/index\.php url script-response-body https://raw.ev2.workers.dev/liu123aq/nzw9314_QuantumultX/main/Script/kkyy.js
 
 # 飒漫画 (By @u18888)
-^https:\/\/m\.samh\.xndm\.tech\/userapi\/info\/v1\/getuserinfo url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/Smh.js
+^https:\/\/m\.samh\.xndm\.tech\/userapi\/info\/v1\/getuserinfo url script-response-body https://raw.ev2.workers.dev/liu123aq/nzw9314_QuantumultX/main/Script/Smh.js
 
 # 奇热小说 解锁收费章节(By @@ios4521)
-^https://api.weiqire.com/api3/(visitor/|user/unlockCharpter) url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/qrxs.js
+^https://api.weiqire.com/api3/(visitor/|user/unlockCharpter) url script-response-body https://raw.ev2.workers.dev/liu123aq/nzw9314_QuantumultX/main/Script/qrxs.js
 
 #第一弹 去广告+原画 (By Miao Miao)
-^https:\/\/api\.diyidan\.net\/v0\.3\/(user\/personal_homepage|vip_user\/info|tv_series\/index\?appChanne) url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/Diyidan.js
+^https:\/\/api\.diyidan\.net\/v0\.3\/(user\/personal_homepage|vip_user\/info|tv_series\/index\?appChanne) url script-response-body https://raw.ev2.workers.dev/liu123aq/nzw9314_QuantumultX/main/Script/Diyidan.js
 # 修复下载视频清晰度
 (http://musicapi\.diyidan\.net/tv_series/video/download/\d+)/(1|2) url 302 $1/4
 
 #人人影视字幕组(商店版)去广告,保留轮播推荐影片(By @Kaya)
-#^http://ctrl.playcvn.com/app/(init|ads) url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/YYeTs.js
+#^http://ctrl.playcvn.com/app/(init|ads) url script-response-body https://raw.ev2.workers.dev/liu123aq/nzw9314_QuantumultX/main/Script/YYeTs.js
 
 #每日英语阅读/每日外刊 解锁课程  (By chamberlen)
-^https:\/\/dict\.eudic\.net\/jingting\/GetThisChapterTaskStatus? url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/mryy.js
+^https:\/\/dict\.eudic\.net\/jingting\/GetThisChapterTaskStatus? url script-response-body https://raw.ev2.workers.dev/liu123aq/nzw9314_QuantumultX/main/Script/mryy.js
 
 # 驾校一点通 (by @superuv)
-^https:\/\/vipapi\.jxedt\.com\/vip\/check url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/jxydt.js
+^https:\/\/vipapi\.jxedt\.com\/vip\/check url script-response-body https://raw.ev2.workers.dev/liu123aq/nzw9314_QuantumultX/main/Script/jxydt.js
 
 # 彩云小译   (by @superuv)
-^https:\/\/api\.interpreter\.caiyunai\.com\/v1\/user url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/cyxy.js
+^https:\/\/api\.interpreter\.caiyunai\.com\/v1\/user url script-response-body https://raw.ev2.workers.dev/liu123aq/nzw9314_QuantumultX/main/Script/cyxy.js
 
 #Bear熊掌记  内购解锁
-^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/bear.js
+^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.ev2.workers.dev/liu123aq/nzw9314_QuantumultX/main/Script/bear.js
 
 #Pocket list (by @superuv)
-^https:\/\/pocketlists\.com\/api\/v1\/pocketlists.me.get url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/pock.js
+^https:\/\/pocketlists\.com\/api\/v1\/pocketlists.me.get url script-response-body https://raw.ev2.workers.dev/liu123aq/nzw9314_QuantumultX/main/Script/pock.js
 
 #海豚记账 (by @superuv)
-https:\/\/book\.haitunwallet\.com\/app\/vip\/status url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/HTJZ.js
+https:\/\/book\.haitunwallet\.com\/app\/vip\/status url script-response-body https://raw.ev2.workers.dev/liu123aq/nzw9314_QuantumultX/main/Script/HTJZ.js
 
 #幕布 (by @superuv)
-https:\/\/mubu\.com\/api\/app\/user\/info url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/mb.js
+https:\/\/mubu\.com\/api\/app\/user\/info url script-response-body https://raw.ev2.workers.dev/liu123aq/nzw9314_QuantumultX/main/Script/mb.js
 
 #智能证件照相机 (by @superuv)
-^https:\/\/app\.xunjiepdf\.com\/api\/v4\/virtualactregister url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/znzj.js
+^https:\/\/app\.xunjiepdf\.com\/api\/v4\/virtualactregister url script-response-body https://raw.ev2.workers.dev/liu123aq/nzw9314_QuantumultX/main/Script/znzj.js
 
 #猫咪翻译(by @superuv)
-http:\/\/miaow\.yiyongcad\.com\/api\/v4\/memprofile url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/mmfy.js
+http:\/\/miaow\.yiyongcad\.com\/api\/v4\/memprofile url script-response-body https://raw.ev2.workers.dev/liu123aq/nzw9314_QuantumultX/main/Script/mmfy.js
 
 #微商助手(by @superuv)
-https:\/\/api\.lennou\.com\/user\/info url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/wszs.js
+https:\/\/api\.lennou\.com\/user\/info url script-response-body https://raw.ev2.workers.dev/liu123aq/nzw9314_QuantumultX/main/Script/wszs.js
 
 #gk扫描仪(by @superuv)
-^https:\/\/api\.gkocr\.com\/api\/userlogin1.php url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/smy.js
+^https:\/\/api\.gkocr\.com\/api\/userlogin1.php url script-response-body https://raw.ev2.workers.dev/liu123aq/nzw9314_QuantumultX/main/Script/smy.js
 
 #羞羞漫画解锁会员
 #使用方法：需要登录才可破解，未登录无法破解
