--- a/Quantumult X/AD_Gai_pengyuyan.conf
+++ b/Quantumult X/AD_Gai_pengyuyan.conf
@@ -1,5 +1,6 @@
 hostname = api.jtshuzhiwa.com,api.revenuecat.com,api-sub.meitu.com
-info.json,notability.com,buy.itunes.apple.com,lcs-mobile-cops.adobe.io,api.sortedapp.com,changeclothes.szsszykj.com,awvp.aoscdn.com,user-kaji-api.b612kaji.com,user.xiaozaoapp.com,cubox.pro,license.pdfexpert.com,wxsdk-data.d3games.com,%APPEND% api4.bybutter.com,server1.xxxy.dayukeji.com,vipapi.jxedt.com,curriculum-api.yizhiweixin.com,partner-ai-api.quthing.com,fcapi.91por.vip,api.xiuxiu.meitu.com,www.caaaat.com,subscription-api.notedapp.io,api.qingning6.com,www.freshhome.top,wx-xmlb.lanfeitech.com,ap*.intsig.net,wallpaper.soutushenqi.com,cn-rest.dhcn.greenergrass.games,mp.weixin.qq.com,top-widgets-api.xiaozujian.com,account.wps.cn,dict.youdao.com,www.xmind.cn,commerce-api.faceu.mobi,api.xunyou.mobi,saomiao.34354.com,m2u-api.getkwai.com, fufei.fengyunsoft.cn,apigate.zymk.cn,
+info.json,notability.com,buy.itunes.apple.com,lcs-mobile-cops.adobe.io,api.sortedapp.com,changeclothes.szsszykj.com,awvp.aoscdn.com,user-kaji-api.b612kaji.com,user.xiaozaoapp.com,cubox.pro,license.pdfexpert.com,wxsdk-data.d3games.com,%APPEND% api4.bybutter.com,server1.xxxy.dayukeji.com,vipapi.jxedt.com,curriculum-api.yizhiweixin.com,partner-ai-api.quthing.com,fcapi.91por.vip,api.xiuxiu.meitu.com,www.caaaat.com,subscription-api.notedapp.io,api.qingning6.com,www.freshhome.top,wx-xmlb.lanfeitech.com,ap*.intsig.net,wallpaper.soutushenqi.com,cn-rest.dhcn.greenergrass.games,mp.weixin.qq.com,top-widgets-api.xiaozujian.com,account.wps.cn,dict.youdao.com,www.xmind.cn,commerce-api.faceu.mobi,api.xunyou.mobi,saomiao.34354.com,m2u-api.getkwai.com, fufei.fengyunsoft.cn,apigate.zymk.cn,bladecn.mofishgames.com,update.kl321.com,wx-bingdu.lanfeitech.com
+
 
 /******************************
 脚本作者：彭于晏
@@ -49,12 +50,10 @@ PrettyUp视频美化
 #*******************************
 ^https?:\/\/api\.revenuecat\.com\/v1\/(receipts|subscribers\/\$RCAnonymousID%3A\w{32})$ url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/Apollo.js
 
-
 #Chic-Stylish Camera+解锁VIP
 #下载地址：http://mtw.so/6r6Rdt
 #*******************************
 ^https:\/\/api-sub\.meitu\.com\/v2\/user\/vip_info\.json url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/Chic.js
-
 
 #Grow - 你的健康+恢复订阅
 #下载地址：http://u6v.cn/5IrhMX
@@ -65,7 +64,6 @@ PrettyUp视频美化
 #下载地址：http://mtw.so/6rEaBQ
 #*******************************
 ^https?:\/\/api\.revenuecat\.com\/v1\/(receipts|subscribers\/\$RCAnonymousID%3A\w{32})$ url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/MoneyThings.js
-
 
 #Notability +解锁订阅
 #下载地址：http://mtw.so/6bQodv
@@ -374,3 +372,20 @@ http:\/\/wallpaper\.soutushenqi\.com\/api\/v1\/account url script-response-body 
 #下载地址：http://u6v.cn/5Xulmx
 #*******************************
 ^https:\/\/apigate\.zymk\.cn url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/zymk.js
+
+#刀剑大作战+无限钻石金币
+#下载地址：https://is.gd/RSGWg0
+#*******************************
+^https:\/\/bladecn\.mofishgames\.com\/bladesrv\/login url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/yx/djdzz.js
+
+#地下城割草+ 无限钻石和金币
+#下载地址：https://is.gd/X0lRCx
+#*******************************
+^https:\/\/update\.kl321\.com\/funservice\/s01\/prefetch\/unifiedfetch url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/yx/dxcgc.js
+
+#消灭病毒+无限钻石金币
+#下载地址：微信小程序
+#*******************************
+^https:\/\/wx-bingdu\.lanfeitech\.com\/api\/archive\/get url script-response-body https://raw.githubusercontent.com/89996462/Quantumult-X/main/yx/xmbd.js
+
+
